# oceanengine_sdk_py

./: .coveragerc  .gitignore  README.md  db_config.toml  pyproject.toml  requirements.txt
.github/workflows/: main.yml
config/: config.ini
src/oceanengine_sdk_py/: __init__.py  oncenengine_sdk_client.py
src/oceanengine_sdk_py/autoSdkCreate/: main.py  test.py
src/oceanengine_sdk_py/config/: config.ini
src/oceanengine_sdk_py/db/: db_client.py  db_module.py
src/oceanengine_sdk_py/local_log/: DAP_logging.py
src/oceanengine_sdk_py/service/: __init__.py  account_service.py  ad_service_plus.py  oauth2.py  oceanengine_sdk_base.py  oceanengine_sdk_py.py  report_service.py  spi_service.py
tests/: test_db_client_module.py  test_oceanengine_sdk.py  test_oceanengine_sdk_client.py  test_service_oauth.py
