[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "oceanengine_sdk_py_tkzs"
authors = [{name = "tiankongzhise", email = "tiankongzhise@163.com"}]
description = "A oceanengine api sdk that can work on Python"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
dynamic = ["version"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/tiankongzhise/oceanengine_sdk_py"

[tool.setuptools.dynamic]
version = {attr = "oceanengine_sdk_py_tkzs.__version__"}